# tap-trustrace

./: .gitignore  README.md  config.json.example  pyproject.toml  tox.ini
tap_trustrace/: client.py  streams.py  tap.py
tap_trustrace/schemas/: materials.json  styles.json
tap_trustrace/tests/: __init__.py  test_core.py
