[tool.poetry]
name = "tap-trustrace"
version = "1.0.0"
description = "`tap-trustrace` is a Singer tap for trustrace, built with the Meltano SDK for Singer Taps."
authors = ["F Ring", "E Norden"]
keywords = [
    "ELT",
    "trustrace",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.6.2"
requests = "^2.25.1"
singer-sdk = "^0.3.18"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_trustrace"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-trustrace = 'tap_trustrace.tap:Taptrustrace.cli'
